[metadata]
name = style
version = 1.1.6
description = 🌈 Terminal string styling
long_description = file: README.rst
keywords = style, color, ansi, terminal styling, chalk
url = https://github.com/lmittmann/style
author = lmittmann
license = MIT
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Natural Language :: English
  Programming Language :: Python :: 2.7
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6

[options]
zip_safe = True
packages = style

[pycodestyle]
max_line_length = 99
